.metals/metals.log
2022.06.04 17:08:59 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /workspaces/experiments-with-scala-metaprogramming/.metals/lsp.trace.json or /home/codespace/.cache/metals/lsp.trace.json
2022.06.04 17:08:59 INFO  logging to file /workspaces/experiments-with-scala-metaprogramming/.metals/metals.log
2022.06.04 17:08:59 INFO  Started: Metals version 0.11.6 in workspace '/workspaces/experiments-with-scala-metaprogramming' for client Visual Studio Code 1.67.2.
2022.06.04 17:09:02 INFO  time: initialize in 2.86s
2022.06.04 17:09:02 WARN  Flyway upgrade recommended: H2 2.1.212 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.1.210.
2022.06.04 17:09:02 WARN  Build server is not auto-connectable.
2022.06.04 17:09:05 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:09:36 INFO  no build target found for /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala. Using presentation compiler with project's scala-library version: 3.1.2
2022.06.04 17:09:38 INFO  time: code lens generation in 32s
2022.06.04 17:25:52 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:25:54 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:25:56 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:26:00 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
Jun 04, 2022 5:26:08 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 74
2022.06.04 17:26:15 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:26:23 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:26:44 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:26:46 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:26:49 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:26:52 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:26:53 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:26:57 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:26:58 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:27:00 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:27:05 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:27:07 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:27:14 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:27:17 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:27:21 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:27:23 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
Jun 04, 2022 5:27:23 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint fallbackResponseError
SEVERE: Internal error: file:///workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala:16: error: unclosed string interpolation
    println(s"greeting())
              ^
java.util.concurrent.CompletionException: file:///workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala:16: error: unclosed string interpolation
    println(s"greeting())
              ^
	at java.base/java.util.concurrent.CompletableFuture.encodeThrowable(CompletableFuture.java:332)
	at java.base/java.util.concurrent.CompletableFuture.completeThrowable(CompletableFuture.java:347)
	at java.base/java.util.concurrent.CompletableFuture$UniAccept.tryFire(CompletableFuture.java:708)
	at java.base/java.util.concurrent.CompletableFuture.postComplete(CompletableFuture.java:510)
	at java.base/java.util.concurrent.CompletableFuture.completeExceptionally(CompletableFuture.java:2162)
	at scala.meta.internal.metals.CancelTokens$.$anonfun$future$1(CancelTokens.scala:40)
	at scala.meta.internal.metals.CancelTokens$.$anonfun$future$1$adapted(CancelTokens.scala:38)
	at scala.concurrent.impl.Promise$Transformation.run(Promise.scala:484)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
	at java.base/java.lang.Thread.run(Thread.java:833)
Caused by: file:///workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala:16: error: unclosed string interpolation
    println(s"greeting())
              ^
	at scala.meta.internal.tokenizers.Reporter.syntaxError(Reporter.scala:23)
	at scala.meta.internal.tokenizers.Reporter.syntaxError$(Reporter.scala:23)
	at scala.meta.internal.tokenizers.Reporter$$anon$1.syntaxError(Reporter.scala:33)
	at scala.meta.internal.tokenizers.Reporter.syntaxError(Reporter.scala:25)
	at scala.meta.internal.tokenizers.Reporter.syntaxError$(Reporter.scala:25)
	at scala.meta.internal.tokenizers.Reporter$$anon$1.syntaxError(Reporter.scala:33)
	at scala.meta.internal.tokenizers.LegacyScanner.getStringPart(LegacyScanner.scala:696)
	at scala.meta.internal.tokenizers.LegacyScanner.fetchDoubleQuote$1(LegacyScanner.scala:391)
	at scala.meta.internal.tokenizers.LegacyScanner.fetchToken(LegacyScanner.scala:410)
	at scala.meta.internal.tokenizers.LegacyScanner.nextToken(LegacyScanner.scala:245)
	at scala.meta.internal.mtags.ScalaToplevelMtags.acceptBalancedDelimeters(ScalaToplevelMtags.scala:274)
	at scala.meta.internal.mtags.ScalaToplevelMtags.loop(ScalaToplevelMtags.scala:172)
	at scala.meta.internal.mtags.ScalaToplevelMtags.indexRoot(ScalaToplevelMtags.scala:50)
	at scala.meta.internal.mtags.MtagsIndexer.index(MtagsIndexer.scala:19)
	at scala.meta.internal.mtags.MtagsIndexer.index$(MtagsIndexer.scala:18)
	at scala.meta.internal.mtags.ScalaToplevelMtags.index(ScalaToplevelMtags.scala:40)
	at scala.meta.internal.mtags.Mtags$.allToplevels(Mtags.scala:96)
	at scala.meta.internal.metals.DefinitionProvider.fromMtags(DefinitionProvider.scala:269)
	at scala.meta.internal.metals.DefinitionProvider.$anonfun$positionOccurrence$3(DefinitionProvider.scala:202)
	at scala.Option.orElse(Option.scala:477)
	at scala.meta.internal.metals.DefinitionProvider.$anonfun$positionOccurrence$1(DefinitionProvider.scala:202)
	at scala.Option.flatMap(Option.scala:283)
	at scala.meta.internal.metals.DefinitionProvider.positionOccurrence(DefinitionProvider.scala:197)
	at scala.meta.internal.metals.DocumentHighlightProvider.$anonfun$documentHighlight$1(DocumentHighlightProvider.scala:33)
	at scala.collection.immutable.List.map(List.scala:246)
	at scala.meta.internal.metals.DocumentHighlightProvider.documentHighlight(DocumentHighlightProvider.scala:29)
	at scala.meta.internal.metals.MetalsLanguageServer.$anonfun$documentHighlights$1(MetalsLanguageServer.scala:1477)
	at scala.meta.internal.metals.CancelTokens$.$anonfun$apply$2(CancelTokens.scala:26)
	at scala.concurrent.Future$.$anonfun$apply$1(Future.scala:678)
	at scala.concurrent.impl.Promise$Transformation.run(Promise.scala:467)
	... 3 more

2022.06.04 17:27:24 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:27:28 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:29:52 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:29:54 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:30:10 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
2022.06.04 17:30:13 WARN  no build target for: /workspaces/experiments-with-scala-metaprogramming/app/src/main/scala/metaprogramming/App.scala
